WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11752
[CSS 3] missing support for cursor selector 'copy'
https://bugs.webkit.org/show_bug.cgi?id=11752
Summary
[CSS 3] missing support for cursor selector 'copy'
Lars Næsbye Christensen
Reported
2006-12-04 23:08:03 PST
The CSS cursor selector is not supported by WebKit.
Attachments
patch to support CSS 3 cursor selector 'copy'
(10.85 KB, patch)
2006-12-04 23:09 PST
,
Lars Næsbye Christensen
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lars Næsbye Christensen
Comment 1
2006-12-04 23:09:57 PST
Created
attachment 11734
[details]
patch to support CSS 3 cursor selector 'copy' The next-to-last we need for full cursor selector support....'none' is a bit trickier.....
Alexey Proskuryakov
Comment 2
2006-12-05 00:28:22 PST
Comment on
attachment 11734
[details]
patch to support CSS 3 cursor selector 'copy' r=me
Alexey Proskuryakov
Comment 3
2006-12-05 00:38:45 PST
Committed revision 18017.
David Kilzer (:ddkilzer)
Comment 4
2006-12-05 09:54:36 PST
Comment on
attachment 11734
[details]
patch to support CSS 3 cursor selector 'copy'
>Index: WebCore/css/CSSValueKeywords.in >=================================================================== >--- WebCore/css/CSSValueKeywords.in (revision 18014) >+++ WebCore/css/CSSValueKeywords.in (working copy) >@@ -170,7 +170,7 @@ no-repeat > # CSS_PROP__WEBKIT_BACKGROUND_COMPOSITE: > # > clear >-copy >+# copy > source-over > source-in > source-out
Did we really want to check that in? Shouldn't that line just be deleted?
David Kilzer (:ddkilzer)
Comment 5
2006-12-05 09:56:58 PST
(In reply to
comment #4
)
> (From update of
attachment 11734
[details]
[edit]) > >Index: WebCore/css/CSSValueKeywords.in > >=================================================================== > >--- WebCore/css/CSSValueKeywords.in (revision 18014) > >+++ WebCore/css/CSSValueKeywords.in (working copy) > >@@ -170,7 +170,7 @@ no-repeat > > # CSS_PROP__WEBKIT_BACKGROUND_COMPOSITE: > > # > > clear > >-copy > >+# copy > > source-over > > source-in > > source-out > > Did we really want to check that in? Shouldn't that line just be deleted?
Actually, I'm not sure that commenting that out is even correct?!
Alexey Proskuryakov
Comment 6
2006-12-05 10:16:10 PST
Yes - that's how duplicate names are treated elsewhere in this file.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug