WebCore/page/EventHandler.cpp
@@ -666,6 +666,8 @@ static Cursor selectCursor(const MouseEventWithHitTestResults& event, Frame* fra
             return noDropCursor();
         case CURSOR_ALIAS:
             return aliasCursor();
+        case CURSOR_COPY:
+            return copyCursor();
         case CURSOR_NOT_ALLOWED:
             return noDropCursor();
         case CURSOR_DEFAULT:
