WebCore/platform/Cursor.h
@@ -110,6 +110,7 @@ namespace WebCore {
     const Cursor& noDropCursor();
     const Cursor& progressCursor();
     const Cursor& aliasCursor();
+    const Cursor& copyCursor();
 
 } // namespace WebCore
 
